--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,45 +1,40 @@
-<ion-content padding>  
-  <ion-segment 
-    (ionChange)="segmentChanged($event)"
-    class="ion-segment-buttons"
-    mode="md">
+<ion-content padding>
+
+  <ion-segment (ionChange)="segmentChanged($event)" class="ion-segment-buttons" mode="md">
+
     <ion-segment-button value="aluno">
       <ion-label>Aluno</ion-label>
     </ion-segment-button>
+
     <ion-segment-button value="professor">
       <ion-label>Professor</ion-label>
     </ion-segment-button>
+
   </ion-segment>
 
-  <!-- <form [formGroup]="userForm" (ngSubmit)="onSign()"> -->
-  <ion-item margin-top>
-    <ion-label position="floating">
-      CPF
-    </ion-label>
-    <ion-input 
-      type="number" 
-    >
-    </ion-input>
-  </ion-item>
-  <ion-item margin-top margin-bottom>
-    <ion-label position="floating">
-      SENHA
-    </ion-label>
-    <ion-input 
-      type="password" 
-    >
-    </ion-input>
-  </ion-item>
-  <ion-button 
-    expand="block" 
-    color="primary" 
-    class="enter-button"
-    margin-bottom
-    [disabled]="false"
-  >
-  Entrar
-  </ion-button>
-  <ion-button [routerLink]="['/home', 'tabs', 'home']">LOUCURA</ion-button>
-  <!-- </form> -->
+
+  <form class="form" [formGroup]="userForm" (ngSubmit)="onSign(userForm.value.user, userForm.value.password)">
+
+    <ion-item margin-top>
+      <ion-label position="floating">
+        RA
+      </ion-label>
+      <ion-input formControlName="user" type="text">
+      </ion-input>
+    </ion-item>
+
+    <ion-item margin-top margin-bottom>
+      <ion-label position="floating">
+        SENHA
+      </ion-label>
+      <ion-input type="password" formControlName="password">
+      </ion-input>
+    </ion-item>
+
+    <ion-button expand="block" type="submit" color="primary" class="enter-button" margin-bottom [disabled]="false">
+      Entrar
+    </ion-button>
+
+  </form>
   <ion-label margin-top><a>Esqueceu a senha?</a></ion-label>
 </ion-content>
