creating home page

--- a/src/app/pages/tabs/home/home.page.html
+++ b/src/app/pages/tabs/home/home.page.html
@@ -6,12 +6,12 @@
 
 <ion-content>
   <ion-row>
-    <ion-col padding-top>
+    <ion-col class="padding-top">
       Olá, <b>{{userData.name}}</b>
     </ion-col>
   </ion-row>
   <ion-row>
-    <ion-col padding-top>
+    <ion-col class="padding-top">
       Turma: ECP6AN-MCA
     </ion-col>
   </ion-row>
@@ -20,20 +20,20 @@
       Curso: Engenharia de Computação
     </ion-col>
   </ion-row>
-  <ion-row class="table-subject" margin-top>
+  <ion-row class="table-subject margin-top">
     <b class="subjects-bold">
       <ion-toolbar>
-        <ion-col margin>Disciplina</ion-col>
-        <ion-col margin>Faltas</ion-col>
-        <ion-col margin>Notas</ion-col>
+        <ion-col class="margin">Disciplina</ion-col>
+        <ion-col class="margin">Faltas</ion-col>
+        <ion-col class="margin">Notas</ion-col>
       </ion-toolbar>
     </b>
   </ion-row>
-  <ion-row>
+  <!-- <ion-row>
     <ion-col>
       <div *ngFor="let subject of subjects">
         <h3>{{subject.name}}</h3>
       </div>
     </ion-col>
-  </ion-row>
+  </ion-row> -->
 </ion-content>
