--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,4 +1,4 @@
-<ion-content padding>
+<ion-content class="ion-padding">
 
   <ion-segment (ionChange)="segmentChanged($event)" class="ion-segment-buttons" mode="md">
 
@@ -15,7 +15,7 @@
 
   <form class="form" [formGroup]="userForm" (ngSubmit)="onSign(userForm.value.user, userForm.value.password)">
 
-    <ion-item margin-top>
+    <ion-item class="ion-margin-top">
       <ion-label position="floating">
         RA
       </ion-label>
@@ -23,7 +23,7 @@
       </ion-input>
     </ion-item>
 
-    <ion-item margin-top margin-bottom>
+    <ion-item class="ion-margin-top ion-margin-bottom">
       <ion-label position="floating">
         SENHA
       </ion-label>
@@ -31,10 +31,10 @@
       </ion-input>
     </ion-item>
 
-    <ion-button expand="block" type="submit" color="primary" class="enter-button" margin-bottom [disabled]="false">
+    <ion-button expand="block" type="submit" color="primary" class="enter-button ion-margin-bottom"  [disabled]="false">
       Entrar
     </ion-button>
 
   </form>
-  <ion-label margin-top><a>Esqueceu a senha?</a></ion-label>
+  <ion-label class="ion-margin-top"><a>Esqueceu a senha?</a></ion-label>
 </ion-content>
