--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,10 +1,37 @@
+$color-padrao: #3171e0;
+$color-grey:grey;
+
+.home-icon{
+    text-align: center;
+    zoom: 2.0;
+    margin-top: 50px;
+    padding: 0 !important;
+}
 .title{
     text-align: center;
-    font-size: 22px;
-    color: #fff;
-    background-color: #3880ff;
-    border-radius: 5px;
+    margin: -10px 0 !important;
+    padding: 0 !important;
+    color: $color-padrao;
 }
-.enter-button{
-    border-radius: 5px;
+.title-subtitle{
+    text-align: center;
+    color: $color-grey;
+    font-size: 14px;
+    margin-top: -10px;
+}
+.subtitle{
+    text-align: center;
+    font-size: 30px;
+    margin-top: 90px;
+    line-height: 2px;
+    color: $color-padrao;
+}
+.subtitle-text{
+    color: $color-grey;
+    text-align: center;
+    font-size: 14px;
+}
+.buttons{
+    margin-top: 50px;
+    text-align: center;
 }
