--- a/src/app/pages/tabs/profile/profile.page.html
+++ b/src/app/pages/tabs/profile/profile.page.html
@@ -1,9 +1,12 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>profile</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-row>
+            <ion-col class="home-icon" size="2">
+                <ion-icon name="book" size="large"></ion-icon>
+            </ion-col>
+            <ion-col class="header-title" size="8">
+                <p>College Interaction</p>
+            </ion-col>
+        </ion-row>
+    </ion-toolbar>
 </ion-header>
-
-<ion-content>
-
-</ion-content>
