--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,8 +1,7 @@
-<ion-tabs>
-
+<ion-tabs color="primary">
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="search">
-      <ion-icon name="search"></ion-icon>
+    <ion-tab-button tab="calendar">
+      <ion-icon name="calendar"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="home">
@@ -13,5 +12,4 @@
       <ion-icon name="person"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
-
 </ion-tabs>
