--- a/src/app/pages/tabs/profile/profile.page.scss
+++ b/src/app/pages/tabs/profile/profile.page.scss
@@ -1,3 +1,6 @@
+$color-padrao: #3171e0;
+$color-grey: grey;
+
 .home-icon{
     text-align: left;
     zoom: 1.5;
@@ -7,4 +10,35 @@
 .header-title{
     font-size: 16px;
     margin-top: 10px !important;
+}
+.avatar{
+    zoom: 2.0;
+    margin: 15px 0 0 10px;
+    padding: 0 !important;
+    position: relative;
+}
+.avatar-name{
+    margin: 20px 0 0 140px;
+    position: absolute;
+}
+.avatar-item{
+    padding: 0 !important;
+}
+.profile-type{
+    color: $color-grey;
+    margin-top: -8px;
+}
+.list-item{
+    margin: 20px 0 0 5px !important;
+}
+.list-item-child{
+    color: $color-grey;
+    margin: 0 0 20px 10px !important;
+}
+.exit-button{
+    margin: 20px 0 0 20px;
+}
+.exit-text{
+    color: red;
+    margin: 25px 0 0 5px;
 }
