adjust calendar page

--- a/src/app/pages/tabs/calendar/calendar.page.scss
+++ b/src/app/pages/tabs/calendar/calendar.page.scss
@@ -16,8 +16,8 @@ $color-grey:grey;
     margin: 20px 0 0 20px;
     font-size: 18px;
 }
-.first-item{
-    margin: 20px 0 0 20px;
+.item{
+    margin: 20px 0 10px 0;
     padding: 0 !important;
 }
 .second-item{
