--- a/src/app/pages/tabs/calendar/calendar.page.html
+++ b/src/app/pages/tabs/calendar/calendar.page.html
@@ -14,66 +14,50 @@
 <ion-content>
   <p class="title">Minha Agenda</p>
   <div class="schedule">
-    <ion-row class="first-item">
-      <ion-col>
-        Prova - ECP6AN-MCA
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-item>
-        <ion-col class="second-item" size="10">
+    <ion-item>
+      <ion-row class="item">
+        <ion-col size="10">
+          Prova - ECP6AN-MCA
+        </ion-col>
+        <ion-col class="second-item">
           [23/11/2019 - 19h10]
         </ion-col>
-        <ion-col>
-          <ion-icon name="trash" mode="ios" size="large" color="danger"></ion-icon>
+      </ion-row>
+      <ion-icon name="trash" mode="ios" size="large" color="danger"></ion-icon>
+    </ion-item>
+    <ion-item>
+      <ion-row class="item">
+        <ion-col size="10">
+          Atividade - ECP7AN-MCA
         </ion-col>
-      </ion-item>
-    </ion-row>
-    <ion-row class="first-item">
-      <ion-col>
-        Atividade - ECP7AN-MCA
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-item>
-        <ion-col class="second-item" size="10">
+        <ion-col class="second-item">
           [27/11/2019 - 21h00]
         </ion-col>
-        <ion-col>
-          <ion-icon name="trash" mode="ios" size="large" color="danger"></ion-icon>
+      </ion-row>
+      <ion-icon name="trash" mode="ios" size="large" color="danger"></ion-icon>
+    </ion-item>
+    <ion-item>
+      <ion-row class="item">
+        <ion-col size="10">
+          Atividade - ECP8AN-MCA
         </ion-col>
-      </ion-item>
-    </ion-row>
-    <ion-row class="first-item">
-      <ion-col>
-        Atividade - ECP9AN-MCA
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-item>
-        <ion-col class="second-item" size="10">
-          [01/12/2019 - 19h10]
+        <ion-col class="second-item">
+          [27/11/2019 - 19h10]
         </ion-col>
-        <ion-col>
-          <ion-icon name="trash" mode="ios" size="large" color="danger"></ion-icon>
+      </ion-row>
+      <ion-icon name="trash" mode="ios" size="large" color="danger"></ion-icon>
+    </ion-item>
+    <ion-item>
+      <ion-row class="item">
+        <ion-col size="10">
+          Prova - ECP9AN-MCA
         </ion-col>
-      </ion-item>
-    </ion-row>
-    <ion-row class="first-item">
-      <ion-col>
-        Prova - ECP8AN-MCA
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-item>
-        <ion-col class="second-item" size="10">
+        <ion-col class="second-item">
           [30/11/2019 - 21h00]
         </ion-col>
-        <ion-col>
-          <ion-icon name="trash" mode="ios" size="large" color="danger"></ion-icon>
-        </ion-col>
-      </ion-item>
-    </ion-row>
+      </ion-row>
+      <ion-icon name="trash" mode="ios" size="large" color="danger"></ion-icon>
+    </ion-item>
   </div>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
