fixing home page

--- a/src/app/pages/tabs/home/home.page.html
+++ b/src/app/pages/tabs/home/home.page.html
@@ -12,6 +12,7 @@
 </ion-header>
 
 <ion-content>
+  <div class="blue-background"></div>
   <div class="image-background">
     <ion-row class="texts">
       <ion-col size="12">
@@ -22,6 +23,7 @@
       </ion-col>
     </ion-row>
   </div>
+
 
   <div class="subjects">
     <ion-row>
@@ -97,10 +99,10 @@
     </ion-row>
 
     <ion-row>
-        <ion-col class="subject">
-          Sistemas Operacionais
-        </ion-col>
-      </ion-row>
+      <ion-col class="subject">
+        Sistemas Operacionais
+      </ion-col>
+    </ion-row>
     <ion-row class="first-item">
       <ion-col size="10">
         <ion-item>
