--- a/src/app/pages/tabs-student/home-student/home-student.page.html
+++ b/src/app/pages/tabs-student/home-student/home-student.page.html
@@ -1,1 +1,116 @@
-<h1>HOME-STUDENT</h1>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-row>
+      <ion-col class="home-icon" size="2">
+        <ion-icon name="book" size="large"></ion-icon>
+      </ion-col>
+      <ion-col class="header-title" size="8">
+        <p>College Interaction</p>
+      </ion-col>
+    </ion-row>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+  <div class="blue-background"></div>
+  <div class="image-background">
+    <ion-row class="texts">
+      <ion-col size="12">
+        <p class="image-title">Olá, Raul</p>
+      </ion-col>
+      <ion-col size="12">
+        <p>Abaixo você poderá acompanhar a sua rotina na faculdade, como as matérias do semestre atual, notas e faltas.
+        </p>
+      </ion-col>
+    </ion-row>
+  </div>
+
+  <div class="subjects">
+    <ion-row class="title-home">
+      <ion-col size="6">
+        <h3>Faltas</h3>
+      </ion-col>
+      <ion-col>
+        <h3>Nota</h3>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col class="subject">
+        Projeto Interdisciplinar - 6B
+      </ion-col>
+    </ion-row>
+
+
+    <ion-row class="grade-absense">
+      <ion-col size="6">
+        10 faltas
+      </ion-col>
+      <ion-col>
+        7.5
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col class="subject">
+        Comunicação Digital, Redes e Internet
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="grade-absense">
+      <ion-col size="6">
+        2 faltas
+      </ion-col>
+      <ion-col>
+        9.5
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col class="subject">
+        Sistemas Operacionais
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="grade-absense">
+      <ion-col size="6">
+        0 faltas
+      </ion-col>
+      <ion-col>
+        10.0
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col class="subject">
+        Sistemas Dinâmicos e Controles
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="grade-absense">
+      <ion-col size="6">
+        4 faltas
+      </ion-col>
+      <ion-col>
+        8.0
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col class="subject">
+        Princípios de Telecomunicações
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="grade-absense">
+      <ion-col size="6">
+        6 faltas
+      </ion-col>
+      <ion-col>
+        9.5
+      </ion-col>
+    </ion-row>
+
+  </div>
+
+</ion-content>
