--- a/src/app/pages/tabs/home/home.page.html
+++ b/src/app/pages/tabs/home/home.page.html
@@ -16,10 +16,11 @@
   <div class="image-background">
     <ion-row class="texts">
       <ion-col size="12">
-        <p class="image-title">Olá, Raul</p>
+        <p class="image-title">Olá, Pedro</p>
       </ion-col>
       <ion-col size="12">
-        <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
+        <p>Abaixo você encontrará os detalhes de suas respectivas turmas, podendo realizar a presença de seus alunos.
+        </p>
       </ion-col>
     </ion-row>
   </div>
