--- a/src/app/pages/tabs/profile/profile.page.scss
+++ b/src/app/pages/tabs/profile/profile.page.scss
@@ -18,8 +18,9 @@ $color-grey: grey;
     position: relative;
 }
 .avatar-name{
-    margin: 20px 0 0 140px;
+    margin: 20px 0 0 130px;
     position: absolute;
+    font-size: 18px;
 }
 .avatar-item{
     padding: 0 !important;
