--- a/src/app/pages/tabs-student/profile-student/profile-student.page.html
+++ b/src/app/pages/tabs-student/profile-student/profile-student.page.html
@@ -1,1 +1,67 @@
-<h1>PROFILE-STUDENT</h1>
+<ion-header>
+    <ion-toolbar color="primary">
+        <ion-row>
+            <ion-col class="home-icon" size="2">
+                <ion-icon name="book" size="large"></ion-icon>
+            </ion-col>
+            <ion-col class="header-title" size="8">
+                <p>College Interaction</p>
+            </ion-col>
+        </ion-row>
+    </ion-toolbar>
+</ion-header>
+
+<ion-content>
+    <ion-row>
+        <ion-col size="6">
+            <ion-avatar class="avatar">
+                <img src="../../../../assets/images/cadeiras.jpg" />
+            </ion-avatar>
+        </ion-col>
+
+        <ion-col class="avatar-name">
+            <p>Raul Lourenço dos Santos</p>
+            <p class="profile-type">Perfil - Aluno</p>
+        </ion-col>
+    </ion-row>
+    <ion-item>
+        <ion-col class="avatar-item">
+        </ion-col>
+    </ion-item>
+    <ion-item>
+        <ion-row>
+            <ion-col size="10">
+                <p class="list-item">Turma</p>
+            </ion-col>
+            <ion-col>
+                <p class="list-item-child">ECP6BN-MCA [19h10 às 22h40]</p>
+            </ion-col>
+        </ion-row>
+    </ion-item>
+    <ion-item>
+        <ion-row>
+            <ion-col size="10">
+                <p class="list-item">RA</p>
+            </ion-col>
+            <ion-col>
+                <p class="list-item-child">816118477</p>
+            </ion-col>
+        </ion-row>
+    </ion-item>
+    <ion-item>
+        <ion-row>
+            <ion-col size="10">
+                <p class="list-item">E-mail</p>
+            </ion-col>
+            <ion-col>
+                <p class="list-item-child">raulsantos.8477@aluno.saojudas.br</p>
+            </ion-col>
+        </ion-row>
+    </ion-item>
+    <ion-row>
+        <ion-button (click)="exit()" fill="clear"> 
+            <ion-icon slot="icon-only" size="large"class="exit-button" color="danger" name="arrow-dropleft"></ion-icon>
+        </ion-button>
+        <p class="exit-text">SAIR</p>
+    </ion-row>
+</ion-content>
