adjust calendar page

--- a/src/app/pages/tabs-student/calendar-student/calendar-student.page.html
+++ b/src/app/pages/tabs-student/calendar-student/calendar-student.page.html
@@ -23,9 +23,7 @@
                     [23/11/2019 - 19h10]
                 </ion-col>
             </ion-row>
-            <ion-button (click)="exit()" fill="clear">
-                <ion-icon slot="icon-only" name="trash" mode="ios" size="large" color="danger"></ion-icon>
-            </ion-button>
+            <ion-icon (click)="delete()" slot="end" name="trash" mode="ios" size="large" color="danger"></ion-icon>
         </ion-item>
         <ion-item>
             <ion-row class="item">
@@ -36,9 +34,7 @@
                     [27/11/2019 - 21h00]
                 </ion-col>
             </ion-row>
-            <ion-button (click)="exit()" fill="clear">
-                <ion-icon slot="icon-only" name="trash" mode="ios" size="large" color="danger"></ion-icon>
-            </ion-button>
+            <ion-icon (click)="delete()" slot="end" name="trash" mode="ios" size="large" color="danger"></ion-icon>
         </ion-item>
         <ion-item>
             <ion-row class="item">
@@ -49,9 +45,7 @@
                     [27/11/2019 - 19h10]
                 </ion-col>
             </ion-row>
-            <ion-button (click)="exit()" fill="clear">
-                <ion-icon slot="icon-only" name="trash" mode="ios" size="large" color="danger"></ion-icon>
-            </ion-button>
+            <ion-icon (click)="delete()" slot="end" name="trash" mode="ios" size="large" color="danger"></ion-icon>
         </ion-item>
         <ion-item>
             <ion-row class="item">
@@ -62,9 +56,7 @@
                     [30/11/2019 - 21h00]
                 </ion-col>
             </ion-row>
-            <ion-button (click)="exit()" fill="clear">
-                <ion-icon slot="icon-only" name="trash" mode="ios" size="large" color="danger"></ion-icon>
-            </ion-button>
+                <ion-icon (click)="delete()" slot="end" name="trash" mode="ios" size="large" color="danger"></ion-icon>
         </ion-item>
     </div>
 
