creating presence page

--- a/src/app/pages/tabs/home/home.page.html
+++ b/src/app/pages/tabs/home/home.page.html
@@ -32,7 +32,7 @@
         Cálculo Diferencial
       </ion-col>
     </ion-row>
-    <ion-row class="first-item">
+    <ion-row (click)="registeringPresence()" class="first-item">
       <ion-col size="10">
         <ion-item>
           Turma ECP6AN-MCA
