adding fixed buttons - bottom

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -6,7 +6,7 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col  class="title" size="12">
+      <ion-col class="title" size="12">
         <p><b>College Interaction</b></p>
       </ion-col>
       <ion-col class="title-subtitle">
@@ -15,14 +15,13 @@
     </ion-row>
     <ion-row>
       <ion-col class="subtitle">
-        <p color="primary" >Seja bem vindo(a)!</p>
+        <p color="primary">Seja bem vindo(a)!</p>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col class="subtitle-text">
-        <p>Lorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem
-          ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem
-          ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsum
+        <p>Um aplicativo para alunos e professores terem acesso as suas rotinas acadêmicas.</p>
+        <p>Utilizando reconhecimento facial para marcar presença.<br><br>
         </p>
       </ion-col>
     </ion-row>
