--- a/src/app/pages/presence/presence.page.html
+++ b/src/app/pages/presence/presence.page.html
@@ -43,22 +43,22 @@
   </ion-row>
 
   <ion-row>
-      <ion-col size="3">
-        <ion-avatar class="avatar">
-          <img src="../../../assets/images/jhonatan_jose.jpg" />
-        </ion-avatar>
-      </ion-col>
-      <ion-col class="student" size="6">
-        Jhonatan Jose da Silva<br>
-        <p class="amountAbsense">0 falta(s) no semestre</p>
-      </ion-col>
-      <ion-col class="checkbox" size="3">
-        <ion-checkbox class="checkbox-child" mode="md" color="success"></ion-checkbox>
-      </ion-col>
-      <ion-item class="emptyItem">
-        <ion-row></ion-row>
-      </ion-item>
-    </ion-row>
+    <ion-col size="3">
+      <ion-avatar class="avatar">
+        <img src="../../../assets/images/jhonatan_jose.jpg" />
+      </ion-avatar>
+    </ion-col>
+    <ion-col class="student" size="6">
+      Jhonatan Jose da Silva<br>
+      <p class="amountAbsense">0 falta(s) no semestre</p>
+    </ion-col>
+    <ion-col class="checkbox" size="3">
+      <ion-checkbox class="checkbox-child" mode="md" color="success"></ion-checkbox>
+    </ion-col>
+    <ion-item class="emptyItem">
+      <ion-row></ion-row>
+    </ion-item>
+  </ion-row>
 
   <ion-row>
     <ion-col size="3">
@@ -115,21 +115,51 @@
   </ion-row>
 
   <ion-row>
-      <ion-col size="3">
-        <ion-avatar class="avatar">
-          <img src="../../../assets/images/raul_lourenco.jpg" />
-        </ion-avatar>
-      </ion-col>
-      <ion-col class="student" size="6">
-        Raul Lourenço dos Santos<br>
-        <p class="amountAbsense">2 falta(s) no semestre</p>
-      </ion-col>
-      <ion-col class="checkbox" size="3">
-        <ion-checkbox class="checkbox-child" mode="md" color="success"></ion-checkbox>
-      </ion-col>
-      <ion-item class="emptyItem">
-        <ion-row></ion-row>
-      </ion-item>
-    </ion-row>
+    <ion-col size="3">
+      <ion-avatar class="avatar">
+        <img src="../../../assets/images/raul_lourenco.jpg" />
+      </ion-avatar>
+    </ion-col>
+    <ion-col class="student" size="6">
+      Raul Lourenço dos Santos<br>
+      <p class="amountAbsense">2 falta(s) no semestre</p>
+    </ion-col>
+    <ion-col class="checkbox" size="3">
+      <ion-checkbox class="checkbox-child" mode="md" color="success"></ion-checkbox>
+    </ion-col>
+    <ion-item class="emptyItem">
+      <ion-row></ion-row>
+    </ion-item>
+  </ion-row>
+
+  <ion-row>
+    <ion-col size="3">
+      <ion-avatar class="avatar">
+        <img src="../../../assets/images/cadeiras.jpg" />
+      </ion-avatar>
+    </ion-col>
+    <ion-col class="student" size="6">
+      Guilherme Gentil<br>
+      <p class="amountAbsense">8 falta(s) no semestre</p>
+    </ion-col>
+    <ion-col class="checkbox" size="3">
+      <ion-checkbox class="checkbox-child" mode="md" color="success"></ion-checkbox>
+    </ion-col>
+    <ion-item class="emptyItem">
+      <ion-row></ion-row>
+    </ion-item>
+  </ion-row>
+
+  <ion-fab class="cameraButton" vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="openCamera()" color="success" fill="clear">
+      <ion-icon mode="md" name="camera"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-button color="primary" shape="round">
+      Salvar
+    </ion-button>
+  </ion-fab>
 
 </ion-content>
