--- a/src/app/pages/presence/presence.page.scss
+++ b/src/app/pages/presence/presence.page.scss
@@ -28,8 +28,7 @@ $color-grey:grey;
     padding: 0 !important;
 }
 .checkbox-child{
-    // border: solid 2px #10dc60;
-    border-color: #10dc60 !important;
+    border: solid 2px #10dc60;
 }
 .amountAbsense{
     color: $color-grey;
@@ -39,5 +38,8 @@ $color-grey:grey;
 .emptyItem{
     width: 100%;
     padding: 0 !important;
-    margin-top: -10px;
+    margin-top: -8px;
+}
+.cameraButton{
+    margin: 0 110px 0 0;
 }
