--- a/src/app/pages/tabs/home/home.page.html
+++ b/src/app/pages/tabs/home/home.page.html
@@ -16,7 +16,7 @@
   <div class="image-background">
     <ion-row class="texts">
       <ion-col size="12">
-        <p class="image-title">Olá, Pedro</p>
+          <p class="image-title">Olá, {{profName}}</p>
       </ion-col>
       <ion-col size="12">
         <p>Abaixo você encontrará os detalhes de suas respectivas turmas, podendo realizar a presença de seus alunos.
@@ -26,104 +26,23 @@
   </div>
 
 
-  <div class="subjects">
+  <div *ngFor="let class of profClasses" class="subjects">
     <ion-row>
       <ion-col class="subject">
-        Cálculo Diferencial
+        <!-- Cálculo Diferencial -->
+        {{class.name}}
       </ion-col>
     </ion-row>
     <ion-row (click)="registeringPresence()" class="first-item">
       <ion-col size="10">
         <ion-item>
-          Turma ECP6AN-MCA
+          Turma {{class.class}}
         </ion-item>
       </ion-col>
       <ion-col class="arrow-icon">
         <ion-icon name="arrow-forward" color="success"></ion-icon>
       </ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col size="10">
-        <ion-item>
-          Turma ECP5AN-MCA
-        </ion-item>
-      </ion-col>
-      <ion-col class="arrow-icon">
-        <ion-icon name="arrow-forward" color="success"></ion-icon>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="10">
-        <ion-item>
-          Turma ECP5AN-MCA
-        </ion-item>
-      </ion-col>
-      <ion-col class="arrow-icon">
-        <ion-icon name="arrow-forward" color="success"></ion-icon>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col class="subject">
-        Cálculo Integral
-      </ion-col>
-    </ion-row>
-    <ion-row class="first-item">
-      <ion-col size="10">
-        <ion-item>
-          Turma ECP4AN-MCA
-        </ion-item>
-      </ion-col>
-      <ion-col class="arrow-icon">
-        <ion-icon name="arrow-forward" color="success"></ion-icon>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="10">
-        <ion-item>
-          Turma ECP3AN-MCA
-        </ion-item>
-      </ion-col>
-      <ion-col class="arrow-icon">
-        <ion-icon name="arrow-forward" color="success"></ion-icon>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="10">
-        <ion-item>
-          Turma ECP7AN-MCA
-        </ion-item>
-      </ion-col>
-      <ion-col class="arrow-icon">
-        <ion-icon name="arrow-forward" color="success"></ion-icon>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col class="subject">
-        Sistemas Operacionais
-      </ion-col>
-    </ion-row>
-    <ion-row class="first-item">
-      <ion-col size="10">
-        <ion-item>
-          Turma ECP8AN-MCA
-        </ion-item>
-      </ion-col>
-      <ion-col class="arrow-icon">
-        <ion-icon name="arrow-forward" color="success"></ion-icon>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="10">
-        <ion-item>
-          Turma ECP9AN-MCA
-        </ion-item>
-      </ion-col>
-      <ion-col class="arrow-icon">
-        <ion-icon name="arrow-forward" color="success"></ion-icon>
-      </ion-col>
-    </ion-row>
-
+    
   </div>
 </ion-content>
